# rsstail.py

./: .flake8rc  .gitignore  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  compgen.py  pyproject.toml  pyzgen.sh  requirements-dev.txt  rsstail.pyz  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  tests.yml
doc/: conf.py  index.rst
docs/: conf.py  index.rst
etc/: _rsstail  rsstail.sh  rsstail.zsh
rsstail/: __main__.py  formatter.py  main.py  version.py
scripts/: compgen.py  pyzgen.sh
src/rsstail/: __main__.py  formatter.py  main.py
tests/: __init__.py  conftest.py  test_formatter.py  test_script.py
tests/feeds/: jenkins.rss  slashdot.rss
