[project]
name = "rsstail"
version = "0.5.1"
description = "A command-line syndication feed monitor mimicking tail -f"
readme = "README.rst"
requires-python = ">=3.3"
license = {file = "LICENSE.txt"}
keywords = ["rss", "tail", "feed", "feedparser"]
authors = [
  {email = "georgi.t.valkov@gmail.com"},
  {name = "Georgi Valkov"}
]
dependencies = ["feedparser >= 5.2.1"]
classifiers = [
  "Environment :: Console",
  "Topic :: Utilities",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Development Status :: 5 - Production/Stable",
]

[project.optional-dependencies]
test = [
  "tox >= 2.6.0",
  "pytest >= 3.0.3",
  "scripttest >= 1.3",
  "pytest-cov >= 2.3.1",
]
devel = [
  "bumpversion >= 0.5.3",
  "readme-renderer >= 16.0",
  "flake8",
  "pep8-naming",
]

[project.urls]
homepage = "https://github.com/gvalkov/rsstail.py"

[project.scripts]
rsstail = "rsstail.main:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.black]
line_length = 120
