[project]
name = "rsstail"
version = "0.6.0"
authors = [
  {name = "Georgi Valkov", email = "georgi.t.valkov@gmail.com"}
]
description = "A command-line syndication feed monitor mimicking tail -f"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["rss", "tail", "feed", "feedparser"]
classifiers = [
  "Environment :: Console",
  "Topic :: Utilities",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Development Status :: 5 - Production/Stable",
]
requires-python = ">=3.9"
dependencies = ["feedparser >= 6.0.11"]

[project.urls]
"Homepage" = "https://github.com/gvalkov/rsstail.py"

[project.optional-dependencies]
test = [
  "tox >= 4.24.1",
  "pytest >= 8.3.5",
  "pytest-cov >= 6.0.0",
]

[project.scripts]
rsstail = "rsstail.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E265", "E241", "F403", "F401", "E401"]

[tool.bumpversion]
current_version = "0.6.0"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "README.md"

[[tool.bumpversion.files]]
filename = "src/rsstail/main.py"

[tool.pytest.ini_options]
pythonpath = ["src"]
