[project]
name = "rsstail"
version = "0.6.0"
authors = [
  {name = "Georgi Valkov", email = "georgi.t.valkov@gmail.com"}
]
description = "A command-line syndication feed monitor mimicking tail -f"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["rss", "tail", "feed", "feedparser"]
classifiers = [
  "Environment :: Console",
  "Topic :: Utilities",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Development Status :: 5 - Production/Stable",
]
requires-python = ">=3.9"
dependencies = ["feedparser >= 6.0.11"]

[project.urls]
"Homepage" = "https://github.com/gvalkov/rsstail.py"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[project.scripts]
rsstail = "rsstail.main:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E265", "E241", "F403", "F401", "E401"]

[tool.bumpversion]
current_version = "0.6.0"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "README.md"

[[tool.bumpversion.files]]
filename = "src/rsstail/main.py"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"
